--- a/GM31_00.vcxproj
+++ b/GM31_00.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="player.h" />
     <ClInclude Include="polygon2D.h" />
     <ClInclude Include="renderer.h" />
+    <ClInclude Include="scene.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="camara.cpp" />
