bulletの追加とplayerの挙動の更新

--- a/GM31_00.vcxproj
+++ b/GM31_00.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="bullet.h" />
     <ClInclude Include="camara.h" />
     <ClInclude Include="component.h" />
     <ClInclude Include="field.h" />
@@ -141,6 +142,7 @@
     <ClInclude Include="scene.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="bullet.cpp" />
     <ClCompile Include="camara.cpp" />
     <ClCompile Include="field.cpp" />
     <ClCompile Include="input.cpp" />
