--- a/GM31_00.vcxproj
+++ b/GM31_00.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="cylinder.h" />
     <ClInclude Include="enemy.h" />
     <ClInclude Include="explosion.h" />
+    <ClInclude Include="fade.h" />
     <ClInclude Include="field.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="gameobject.h" />
@@ -169,6 +170,7 @@
     <ClCompile Include="cylinder.cpp" />
     <ClCompile Include="enemy.cpp" />
     <ClCompile Include="explosion.cpp" />
+    <ClCompile Include="fade.cpp" />
     <ClCompile Include="field.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="imgui.cpp" />
