add: メッシュFieldの修正とカメラの更新

--- a/GM31_00.vcxproj
+++ b/GM31_00.vcxproj
@@ -132,7 +132,7 @@
     <ClInclude Include="animationModel.h" />
     <ClInclude Include="audio.h" />
     <ClInclude Include="bullet.h" />
-    <ClInclude Include="camara.h" />
+    <ClInclude Include="camera.h" />
     <ClInclude Include="component.h" />
     <ClInclude Include="cylinder.h" />
     <ClInclude Include="enemy.h" />
@@ -168,7 +168,7 @@
     <ClCompile Include="animationModel.cpp" />
     <ClCompile Include="audio.cpp" />
     <ClCompile Include="bullet.cpp" />
-    <ClCompile Include="camara.cpp" />
+    <ClCompile Include="camera.cpp" />
     <ClCompile Include="cylinder.cpp" />
     <ClCompile Include="enemy.cpp" />
     <ClCompile Include="explosion.cpp" />
